examples/009-Ingress/fruits-ingress/fruits-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fruits-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: fruits.singleton.net
    http:
      paths:
      - path: /apple
        pathType: Prefix
        backend:
          service:
            name: "apple-service"
            port:
              number: 5678
      - path: /banana
        pathType: Prefix
        backend:
          service:
            name: "banana-service"
            port:
              number: 5678
